--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,12 @@
-@import "./header.css"
+@import "./header.css";
+@import "./main.css";
+@import "./footer.css";
+@import "./responsive-background.css";
+@import "./bootstrap.css";
+@import "./responsive-elements.css";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Source+Serif+4:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap');@import "./body.css";
 
+
+
+  
